# random_projects

./: README.MD
diabetes-ml-app/: main.py  notebook.ipynb  pipeline.py  pyproject.toml  scaler.pkl
diabetes-ml-app/.zen/: config.yaml
diabetes-ml-app/steps/: data_loader.py  data_preprocessing.py  trainer.py
fastapi_basics/: main.py  pyproject.toml
skin-project/: main.py  pyproject.toml  schema.py  utils.py
vet_ai/: config.py  main.py  models.py  pyproject.toml
