[project]
name = "diabetes-ml-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.12",
    "logfire>=3.23.0",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
    "xgboost>=3.0.2",
    "zenml[server]>=0.83.1",
]
