[project]
name = "skin-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "logfire>=3.24.2",
    "numpy>=2.3.1",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
]
